[gd_scene load_steps=6 format=3 uid="uid://bomawm6k6w5i1"]

[ext_resource type="Script" path="res://scenes/login.gd" id="1_tef04"]
[ext_resource type="Theme" uid="uid://cjguujtn3sfeg" path="res://default_theme.tres" id="2_e3wbr"]
[ext_resource type="FontFile" uid="uid://dxf41d5c55der" path="res://assets/fonts/nord/Nord Bold.otf" id="3_8jj6q"]
[ext_resource type="FontFile" uid="uid://7hqhpammf0hp" path="res://assets/fonts/nord/Nord Regular.otf" id="4_vngcu"]

[sub_resource type="Theme" id="Theme_n2k6p"]
default_font_size = 48
Button/fonts/font = ExtResource("3_8jj6q")
Label/fonts/font = ExtResource("4_vngcu")
TabBar/fonts/font = ExtResource("4_vngcu")

[node name="Login" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tef04")

[node name="Login" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.5
offset_top = -175.0
offset_right = 180.5
offset_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2

[node name="Login" type="ColorRect" parent="Login"]
layout_mode = 2
color = Color(0.259294, 0.259294, 0.259294, 1)

[node name="MarginContainer" type="MarginContainer" parent="Login"]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="Login/MarginContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_e3wbr")
theme_override_constants/separation = 48

[node name="Label" type="Label" parent="Login/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = SubResource("Theme_n2k6p")
text = "INICIO DE SESIÓN"

[node name="VBoxContainer" type="VBoxContainer" parent="Login/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_e3wbr")

[node name="Label" type="Label" parent="Login/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_e3wbr")
text = "Email"

[node name="EmailInput" type="LineEdit" parent="Login/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_e3wbr")
placeholder_text = "test@test.com"

[node name="Label2" type="Label" parent="Login/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_e3wbr")
text = "Contraseña"

[node name="PasswordInput" type="LineEdit" parent="Login/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_e3wbr")
secret = true

[node name="VBoxContainer2" type="VBoxContainer" parent="Login/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_e3wbr")

[node name="LoginBtn" type="Button" parent="Login/MarginContainer/VBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_e3wbr")
text = "Inicia sesión"

[node name="RegisterBtn" type="Button" parent="Login/MarginContainer/VBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_e3wbr")
text = "Regístrate"

[node name="Register" type="MarginContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -222.5
offset_top = -202.5
offset_right = 222.5
offset_bottom = 202.5
grow_horizontal = 2
grow_vertical = 2

[node name="Register" type="ColorRect" parent="Register"]
layout_mode = 2
size_flags_horizontal = 3
color = Color(0.259294, 0.259294, 0.259294, 1)

[node name="MarginContainer" type="MarginContainer" parent="Register"]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="Register/MarginContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_e3wbr")
theme_override_constants/separation = 48

[node name="Label" type="Label" parent="Register/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = SubResource("Theme_n2k6p")
text = "CREA UNA CUENTA"

[node name="VBoxContainer" type="VBoxContainer" parent="Register/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_e3wbr")

[node name="Label" type="Label" parent="Register/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_e3wbr")
text = "Email"

[node name="NewEmailInput" type="LineEdit" parent="Register/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_e3wbr")
placeholder_text = "test@test.com"

[node name="Label2" type="Label" parent="Register/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_e3wbr")
text = "Contraseña"

[node name="NewPasswordInput" type="LineEdit" parent="Register/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_e3wbr")
secret = true

[node name="Label3" type="Label" parent="Register/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_e3wbr")
text = "Repite la contraseña"

[node name="RepeatNewPasswordInput" type="LineEdit" parent="Register/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_e3wbr")
secret = true

[node name="VBoxContainer2" type="VBoxContainer" parent="Register/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_e3wbr")

[node name="ConfirmBtn" type="Button" parent="Register/MarginContainer/VBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_e3wbr")
text = "Crear cuenta"

[node name="BackBtn" type="Button" parent="Register/MarginContainer/VBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_e3wbr")
text = "Atrás"

[connection signal="pressed" from="Login/MarginContainer/VBoxContainer/VBoxContainer2/LoginBtn" to="." method="_on_login_btn_pressed"]
[connection signal="pressed" from="Login/MarginContainer/VBoxContainer/VBoxContainer2/RegisterBtn" to="." method="_on_register_btn_pressed"]
[connection signal="pressed" from="Register/MarginContainer/VBoxContainer/VBoxContainer2/ConfirmBtn" to="." method="_on_confirm_btn_pressed"]
[connection signal="pressed" from="Register/MarginContainer/VBoxContainer/VBoxContainer2/BackBtn" to="." method="_on_back_btn_pressed"]
